# nlp-advanced-2025-epita

./: .gitignore  ARTHUR_CONTRIBUTIONS.md  EVALUATION.md  RAG.md  README.md  TESTING_GUIDE.md  archi.md  download_vad.sh  main.py  main2.py  main_streaming.py  pyproject.toml
evaluation/: evaluate.py  schemas.py  statistics.py
evaluation/tests/example/: config.yaml
experiments/: brain.py  brain_streaming.py  main.py  record.py  stt.py  test_npc_orchestrator.py  tts.py  vad.py
lore/: session.yaml  world.yaml
src/: main.py
src/audio/: __init__.py  audio_utils.py  recorder.py  vad_listener.py
src/conversation/: __init__.py  orchestrator.py
src/evaluation/: evaluate.py  schemas.py  statistics.py
src/evaluation/tests/aldric_quest/: config.yaml
src/evaluation/tests/aria_item/: config.yaml
src/evaluation/tests/ashara_quest/: config.yaml
src/evaluation/tests/barnaby_info/: config.yaml
src/evaluation/tests/bella_info/: config.yaml
src/evaluation/tests/blackwood_info/: config.yaml
src/evaluation/tests/blackwood_item/: config.yaml
src/evaluation/tests/blackwood_quest/: config.yaml
src/evaluation/tests/borin_item/: config.yaml
src/evaluation/tests/borin_quest/: config.yaml
src/evaluation/tests/brutus_item/: config.yaml
src/evaluation/tests/brutus_quest/: config.yaml
src/evaluation/tests/cassandra_quest/: config.yaml
src/evaluation/tests/corvus_info/: config.yaml
src/evaluation/tests/crystal_item/: config.yaml
src/evaluation/tests/crystal_item2/: config.yaml
src/overhearing/: __init__.py  context_manager.py  trigger_detector.py
src/pipeline/: __init__.py  npc_pipeline.py  overhearing_pipeline.py
src/rag/: __init__.py  lore_manager.py  models.py
src/stt/: __init__.py  engine.py
src/tts/: __init__.py  engine.py
tests/: test_e2e_pipeline.py  test_orchestrator.py  test_rag.py  test_stt.py
ui/: app.py  talk.py  test.py
ui/scenes/: guard_barracks.json  rusty_anchor.json  tavern.json
ui/static/: style.css
ui/templates/: index.html
(+57 files in other folders)
